# impactu_airflow

./: .airflowignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  README_DEVOPS.md  pyproject.toml  requirements-dev.txt  test_local_validation.sh
.github/workflows/: deploy.yml  publish.yml  validate-pr.yml
dags/: extract_scimagojr.py
extract/scimagojr/: README.md  scimagojr_extractor.py
tests/etl/: test_dag_integrity.py  test_scimagojr.py
